--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -32,7 +32,7 @@
 .myLayout {
     background-color: #222;
     border: none;
-    min-height: calc(100vh - 180px); 
+    min-height: calc(100vh - 200px); 
     max-height: none;
     width: 100%;
     padding-top: 20px;
@@ -56,4 +56,10 @@
     font-family: "Roboto-Black";
     font-size: 20px;
     color: lightgray;
+}
+
+@media(max-width: 540px) {
+    .{
+        font-size: 85px;
+    }
 }
