major structural changes in subs and search pages

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
     background-color: transparent;
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 10em;
+    font-size: 160px;
     outline: none;
     border: none;
     border-bottom: 3px solid #008f76;
@@ -12,7 +12,7 @@
 input::placeholder {
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 195px;
+    font-size: 160px;
 }
 .row1 {
     background-color: #222;
@@ -32,23 +32,23 @@ input::placeholder {
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 195px;
+    font-size: 160px;
   }
   ::-moz-placeholder { /* Firefox 19+ */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 195px;
+    font-size: 160px;
     opacity: 1;
   }
   :-ms-input-placeholder { /* IE 10+ */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 195px;
+    font-size: 160px;
   }
   :-moz-placeholder { /* Firefox 18- */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 195px;
+    font-size: 160px;
   }
 
 .name {
@@ -57,8 +57,40 @@ input::placeholder {
     color: #008f76;
 }
 
-@media(max-width: 480px) {
+@media(max-width:1366px) {
+    .searchBar {
+        font-size: 140px;
+    }
     input::placeholder {
-        font-size: 80px;
+        font-size: 140px;
+    }
+}
+
+
+@media(max-width:1280px) {
+    .searchBar {
+        font-size: 120px;
+    }
+    input::placeholder {
+        font-size: 120px;
+    }
+}
+
+
+@media(max-width: 720px) {
+    .searchBar {
+        font-size: 90px;
+    }
+    input::placeholder {
+        font-size: 90px;
+    }
+}
+
+@media(max-width: 480px) {
+    .searchBar {
+        font-size: 55px;
+    }
+    input::placeholder {
+        font-size: 55px;
     }
 }
