--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a (click)="goBack()" class="backBtn"><i class="fa fa-long-arrow-left"></i></a>
         <div (click)="currentId=show.show.id; showMore = !showMore;" *ngFor="let show of shows; let i = index;" class="tile">
-        <div class="col-md-1 col-sm-2 col-xs-2" style="min-height: 150px">
+        <div class="col-md-1 col-sm-2 col-xs-2 imgClass">
             <img src="{{show.show.image.medium || show.show.image}}" height="150px" width="100px" class="myImg">
         </div>
         <div class="col-md-9 col-sm-8 col-xs-7" style="min-height: 150px">
