--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -6,18 +6,22 @@
             <div class="container">
                 <div *ngFor="let show of shows; let i = index">
                     <div *ngIf="subsList[show.id]" class="tile">
-                        <div class="col-md-1 col-sm-2 col-xs-2">
-                                <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
+                            <div class="col-md-9 col-sm-8 col-xs-12">
+                                    <div class="col-md-2 col-sm-2 col-xs-2">
+                                        <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
+                                    </div>
+                                    <div class="col-md-10 col-sm-10 col-xs-10">
+                                            <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
+                                            <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
+                                            <span style="font-size: 16px">{{verdict[show.id]}}</span><br>
+                                            <p style="font-size: 16px" [innerHTML]="show.summary"></p>
+                                    </div>
                             </div>
-                            <div class="col-md-9 col-sm-8 col-xs-7">
-                                <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
-                                <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
-                                <span style="font-size: 16px">{{verdict[show.id]}}</span><br>
-                                <p style="font-size: 16px" [innerHTML]="show.summary"></p>
+                            <div class="col-md-2 col-sm-2 col-xs-6">
+                                <button (click)="unsubscribe(show.id)" class="btn subsBtn pull-right">unsubscribe</button>
                             </div>
-                            <div class="col-md-2 col-sm-2 col-xs-3">
-                                <button (click)="unsubscribe(show.id)" class="btn subsBtn pull-right">unsubscribe</button><br>
-                                <button routerLink="/episode" class="btn subsBtn pull-right">all episodes</button>
+                            <div class="col-md-2 col-sm-2 col-xs-6">
+                                    <button routerLink="/episode" class="btn subsBtn pull-right">all episodes</button>
                             </div>
                     </div>
                     <div class="clearfix"></div>
