--- a/src/app/subs/subs.component.css
+++ b/src/app/subs/subs.component.css
@@ -5,7 +5,7 @@
     font-family: "Roboto";
     font-size:16px;
     color: lightgray;
-    margin-top: 15px;
+    margin-top: 50px;
 }
 .subsBtn {
     font-family: "Roboto-Regular";
@@ -19,7 +19,7 @@
     outline: none;
     height: 40px;
     width: 120px;
-    margin-top: 7.2px;
+    margin-top: 20px;
 }
 .subsBtn:hover {
     color: whitesmoke;
@@ -60,5 +60,15 @@
     }
     .name {
         font-size: 15px;
+    }
+    .subsBtn {
+        font-size: 12px;
+        height: 35px;
+        width: 100px;
+        margin-top: 0px;
+    }
+    .episodeBtn {
+        position: relative;
+        float: right;
     }
 }
