--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -9,7 +9,7 @@
     font-family: "Roboto";
     font-size:16px;
     color: lightgray;
-    margin-top: 15px;
+    padding-bottom: 100px;
 }
 .subsBtn {
     font-family: "Roboto-Regular";
@@ -23,7 +23,6 @@
     outline: none;
     height: 40px;
     width: 120px;
-    margin-top: 7.2px;
 }
 .subsBtn:hover {
     color: whitesmoke;
@@ -76,5 +75,10 @@
     }
     .name {
         font-size: 15px;
+    }
+    .subsBtn {
+        font-size: 12px;
+        height: 30px;
+        width: 90px;
     }
 }
