--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,31 +1,30 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-    <div *ngIf="myShows.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
-        <span class="name">subscribe to shows to see their schedule</span>
-    </div>
-    <ng-template #showsBlock>
-            <div class="container">
-                <div *ngFor="let show of shows; let i = index">
-                    <div *ngIf="subsList[show.id]" class="tile">
-                            <div class="col-md-9 col-sm-8 col-xs-12">
-                                    <div class="col-md-2 col-sm-3 col-xs-4">
-                                        <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
-                                    </div>
-                                    <div class="col-md-10 col-sm-9 col-xs-8">
-                                            <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
-                                            <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
-                                            <span class="verdict">{{verdict[show.id]}}</span><br>
-                                            <p class="summary" [innerHTML]="show.summary"></p>
-                                    </div>
-                            </div>
-                            <div class="col-md-2 col-sm-2 col-xs-6">
-                                <button (click)="unsubscribe(show.id)" class="btn subsBtn pull-right">unsubscribe</button>
-                            </div>
-                            <div class="col-md-2 col-sm-2 col-xs-6">
-                                    <button routerLink="/episode" class="btn subsBtn pull-right">all episodes</button>
-                            </div>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
+  <div *ngIf="myShows.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
+    <span class="name">subscribe to shows to see their schedule</span>
+  </div>
+  <ng-template #showsBlock>
+    <div class="container">
+      <div *ngFor="let show of shows; let i = index">
+        <div *ngIf="subsList[show.id]" class="row gutter-0 tile">
+          <div class="col-md-10 col-sm-8 col-xs-12">
+            <div class="col-md-2 col-sm-3 col-xs-4">
+              <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
             </div>
-        </ng-template>
+            <div class="col-md-10 col-sm-9 col-xs-8">
+              <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
+              <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
+              <span class="verdict">{{verdict[show.id]}}</span><br>
+              <p class="summary" [innerHTML]="show.summary"></p>
+            </div>
+          </div>
+          <div class="col-md-2 col-sm-2 col-xs-6">
+            <button (click)="unsubscribe(show.id)" class="btn subsBtn">unsubscribe</button>
+          </div>
+          <div class="col-md-2 col-sm-2 col-xs-6">
+            <button routerLink="/episode" class="btn subsBtn episodeBtn">all episodes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
 </div>
