--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -31,9 +31,8 @@
         </ng-template>
       </div>
       <div class="col-md-2 col-sm-2 col-xs-6">
-        <a href="{{show.show.url}}+/episodes" target="_blank" class="btn subsBtn pull-right">all episodes</a>
+        <a href="{{show.show.url}}+/episodes" target="_blank" class="btn subsBtn episodeBtn">all episodes</a>
       </div>
-      <hr style="background-color:#008f76">
     </div>
   </div>
 </div>
