--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
 .searchBar {
-    height: 20vh;
+    height: 12vmax;
     width: 100%;
     background-color: transparent;
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 160px;
+    font-size: 15vmin;
     outline: none;
     border: none;
     border-bottom: 3px solid #008f76;
@@ -12,15 +12,15 @@
 input::placeholder {
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 160px;
+    font-size: 15vmin;
 }
 .row1 {
     background-color: #222;
     width: 100%;
-    height: 20vh;
+    height: 12vmax;
 }
 .container1 {
-    height: 20vh;
+    height: 12vmax;
 }
 
 .footer {
@@ -32,65 +32,27 @@ input::placeholder {
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 140px;
+    font-size: 15vmin;
   }
   ::-moz-placeholder { /* Firefox 19+ */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 160px;
+    font-size: 15vmin;
     opacity: 1;
   }
   :-ms-input-placeholder { /* IE 10+ */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 160px;
+    font-size: 15vmin;
   }
   :-moz-placeholder { /* Firefox 18- */
     color: #008f76;
     font-family: "Roboto-Black";
-    font-size: 160px;
+    font-size: 15vmin;
   }
 
 .name {
     font-family: "Roboto";
     font-size: 20px;
     color: #008f76;
-}
-
-@media(max-width:1366px) {
-    .searchBar {
-        font-size: 130px;
-    }
-    input::placeholder {
-        font-size: 130px;
-    }
-}
-
-
-@media(max-width:1280px) {
-    .searchBar {
-        font-size: 110px;
-    }
-    input::placeholder {
-        font-size: 110px;
-    }
-}
-
-
-@media(max-width: 720px) {
-    .searchBar {
-        font-size: 90px;
-    }
-    input::placeholder {
-        font-size: 90px;
-    }
-}
-
-@media(max-width: 480px) {
-    .searchBar {
-        font-size: 45px;
-    }
-    input::placeholder {
-        font-size: 45px;
-    }
 }
