back button replaced

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,15 +1,30 @@
 .backBtn {
+    font-family: "Roboto-Regular";
+    font-size: 15px;
+    background-color: 
+    #008f76;
+    color: #222;
+    vertical-align: center;
+    outline: none;
+    height: 40px;
+    width: 100%;
+    margin-bottom: 15px;
+    border-radius: 2px;
+}
+.backBtn:hover {
     color: #008f76;
-    font-size: 25px;
+    background-color: transparent;
+    border: 2px solid #008f76;
+    cursor: pointer;
 }
 .tile{
     min-height: 150px;
     width: 100%; 
-    background-color: #222;
+    background-color: #111;
     font-family: "Roboto";
     font-size:16px;
     color: lightgray;
-    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .subsBtn {
     font-family: "Roboto-Regular";
@@ -23,7 +38,6 @@
     outline: none;
     height: 40px;
     width: 120px;
-    margin-top: 20px;
 }
 .subsBtn:hover {
     color: whitesmoke;
@@ -66,10 +80,6 @@
     min-height: 150px;
 }
 
-.backBtn:hover {
-    cursor: pointer;
-}
-
 @media(max-width: 540px) {
     .badge, .verdict, .summary {
         font-size: 13px;
@@ -81,7 +91,10 @@
         font-size: 12px;
         height: 35px;
         width: 100px;
-        margin-top: 0px;
+    }
+    .backBtn {
+        font-size: 12px;
+        height: 35px;
     }
     .episodeBtn {
         position: relative;
