--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="row gutter-0 row1">
-    <div class="container container1">
+<div class="row gutter-0 row1 mt-3">
+    <div class="container">
         <input type="text"  [(ngModel)]="show" placeholder="timemyshow" class="searchBar" routerLink="/search" (keypress)=eventHandler($event)>
     </div>
 </div>
