--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -3,25 +3,34 @@
     <span class="name">subscribe to shows to see their schedule</span>
   </div>
   <ng-template #showsBlock>
-    <div class="container content">
+    <div class="container mt-5">
       <div *ngFor="let show of shows; let i = index">
-        <div *ngIf="subsList[show.id]" class="row gutter-0 tile">
-          <div class="col-md-10 col-sm-8 col-xs-12" style="min-height: 170px">
-            <div class="col-md-2 col-sm-3 col-xs-4">
-              <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
-            </div>
-            <div class="col-md-10 col-sm-9 col-xs-8">
-              <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
-              <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
-              <span class="verdict">{{verdict[show.id]}}</span><br>
-              <p class="summary" [innerHTML]="show.summary"></p>
+        <div *ngIf="subsList[show.id]" class="row gutter-0 tile mb-5">
+          <div class="col-md-10 col-sm-12 mb-2 mb-sm-2">
+            <div class="row no-gutter">
+              <div class="col-md-2 col-sm-3 col-3 pr-md-0 px-0 pl-3">
+                <img src="{{show.image.medium || show.image}}" width="80%" class="myImg d-none d-sm-block">
+                <img src="{{show.image.medium || show.image}}" width="100%" class="myImg d-block d-sm-none d-md-none">
+              </div>
+              <div class="col-md-10 col-sm-9 col-9 pl-md-0">
+                <span class="name mr-1"><b>{{show.name}}</b>
+                  <span class="ml-1" *ngIf="show.premiered !== null">({{show.premiered.split('-')[0]}})</span>
+                </span>
+                <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
+                <span *ngIf="show.webChannel !== null">
+                  <img *ngIf="show.webChannel.name === 'Netflix'" src="assets/netflix.png" width="60px">
+                  <img *ngIf="show.webChannel.name === 'Hulu'" src="assets/hulu.png" width="45px">
+                  <img *ngIf="show.webChannel.name === 'Amazon Prime'" src="assets/prime.png" width="35px"><br>
+                </span>
+                <span class="verdict">Runtime: {{show.runtime || '?'}} minutes</span><br>
+                <span class="verdict" style="white-space: pre-line;">{{verdict[show.id]}}</span><br>
+                <!--<p class="summary" [innerHTML]="show.summary"></p>-->
+              </div>
             </div>
           </div>
-          <div class="col-md-2 col-sm-2 col-xs-6">
+          <div class="col-md-2 col-sm-12 text-md-right">
             <button (click)="unsubscribe(show.id)" class="btn subsBtn">unsubscribe</button>
-          </div>
-          <div class="col-md-2 col-sm-2 col-xs-6">
-            <a href="{{show.url}}+/episodes" target="_blank" class="btn subsBtn episodeBtn">all episodes</a>
+            <a href="{{show.url}}+/episodes" target="_blank" class="btn subsBtn episodeBtn ml-1">all episodes</a>
           </div>
         </div>
       </div>
