--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row gutter-0 row1 mt-3">
     <div class="container">
-        <input type="text"  [(ngModel)]="show" placeholder="timemyshow" class="searchBar" routerLink="/search" (keypress)=eventHandler($event)>
+        <input type="text"  [(ngModel)]="show" placeholder="timemyshow" class="searchBar" routerLink="/search" (keypress)=eventHandler($event) autofocus>
     </div>
 </div>
 <div *ngIf="showSearch; else subBlock">
