--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,10 +1,10 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-  <div *ngIf="myShows.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
+  <div *ngIf="sortedShows.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
     <span class="name">subscribe to shows to see their schedule</span>
   </div>
   <ng-template #showsBlock>
     <div class="container mt-5">
-      <div *ngFor="let show of shows; let i = index">
+      <div *ngFor="let show of sortedShows; let i = index">
         <div *ngIf="subsList[show.id]" class="row gutter-0 tile mb-5">
           <div class="col-md-10 col-sm-12 mb-2 mb-sm-2">
             <div class="row no-gutter">
